syntax = "proto3";

package com.silhouette.api.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "auth.proto";

// Phones service provides operations for managing user phone information.
service Phones {

    // creates/adds a new phone information for a user
    rpc CreatePhone(CreatePhoneRequest) returns (Phone) {
        option (auth_config) = {
            required_scopes: ["w:silhouette:*", "w:silhouette:phone:*"]
            self_access_allowed: true
        };
    };

    // updates an existing phone information for a user
    rpc UpdatePhone(UpdatePhoneRequest) returns (Phone) {
        option (auth_config) = {
            required_scopes: ["w:silhouette:*", "w:silhouette:phone:*"]
            self_access_allowed: true
        };
    };

    // deletes a phone information for a user
    rpc DeletePhone(DeletePhoneRequest) returns (google.protobuf.Empty) {
        option (auth_config) = {
            required_scopes: ["w:silhouette:*", "w:silhouette:phone:*"]
            self_access_allowed: true
        };
    };

}

enum PhoneType {
    PHONE_TYPE_UNSPECIFIED = 0;
    PHONE_TYPE_MOBILE = 1;
    PHONE_TYPE_HOME = 2;
    PHONE_TYPE_WORK = 3;
}

// Phone represents a user's phone information.
message Phone {
    string uuid = 1;
    string slug = 2;
    string phone_uuid = 3;
    string country_code = 4;
    string phone_number = 5;
    optional string extension = 6;
    PhoneType phone_type = 7;
    bool is_current = 8;
    google.protobuf.Timestamp updated_at = 9;
    google.protobuf.Timestamp created_at = 10;
}

// CreatePhoneRequest is a model for the request message for 
// creating a new phone record for a user.
message CreatePhoneRequest {
    string username = 1;
    string country_code = 2;
    string phone_number = 3;
    optional string extension = 4;
    PhoneType phone_type = 5;
}

// UpdatePhoneRequest is a model for the request message for 
// updating an existing phone record for a user.
message UpdatePhoneRequest {
    string username = 1;
    string phone_slug = 2;
    string country_code = 3;
    string phone_number = 4;
    optional string extension = 5;
    PhoneType phone_type = 6;
    bool is_current = 7;
}

// DeletePhoneRequest is a model for the request message for 
// deleting a user's phone record.
message DeletePhoneRequest {
    string username = 1;
    string phone_slug = 2;
}



